[fix] margin=0 for all labels so choices get visible inside .messages

--- a/web/style.css
+++ b/web/style.css
@@ -50,6 +50,7 @@ html {
   margin-top: 50px;
   font-size: 2em;
   font-weight: bold;
+  margin: 0;
 }
 
 .messages label {
@@ -91,3 +92,6 @@ html {
 }
 
 /*editing margin between choices*/
+#choices {
+  margin: 2em;
+}
